Fix several app-header search styling issues on mobile
After introduction of the new op-autocompleter component for the app-search component, there were a couple of styling
issues related to the ng-select default styles.

* Correctly set max-width to 679px, so that the tablet breakpoint starts at 680px exactly. There were some issues with
  overlapping queries or queries that ignored the exact 680px point
* Disable line wrapping in menu items. The "sign in" button was getting line wrapped on certain screen sizes
* Fix text vertical alignment in the search input

--- a/frontend/src/app/core/global_search/input/global-search-input.component.sass
+++ b/frontend/src/app/core/global_search/input/global-search-input.component.sass
@@ -13,7 +13,7 @@ $search-input-height: 30px
   line-height: var(--header-height)
   margin: 0 15px
 
-  @media screen and (max-width: 680px)
+  @media screen and (max-width: 679px)
     margin: 0
 
   &--back-button
@@ -32,7 +32,7 @@ $search-input-height: 30px
     // TODO: This should be using  @include breakpoint(680px down)
     // Which is hard to do since we don't have access here and it'll
     // probably require a larger sass import refactoring
-    @media screen and (max-width: 680px)
+    @media screen and (max-width: 679px)
       position: relative
       padding: 0 8px
 
@@ -73,7 +73,11 @@ $search-input-height: 30px
       text-align: center
 
     .ng-input
-      top: 0
+      @media screen and (max-width: 679px)
+        // TODO: We need to do this because the default ng-select theme uses a specificity of 5(!) classes
+        // We should probably remove the default theme altogether at some point
+        top: 0 !important
+
       input
         color: var(--header-item-font-color)
         height: $search-input-height
