--- a/frontend/src/app/core/global_search/input/global-search.component.sass
+++ b/frontend/src/app/core/global_search/input/global-search.component.sass
@@ -1,6 +1,9 @@
 .global-search
   flex-grow: 1
 
+  @media screen and (max-width: 679px)
+    display: none
+
   &--option,
   &--option:hover
     padding: 5px 5px
