--- a/frontend/src/global_styles/common/header/app-menu.sass
+++ b/frontend/src/global_styles/common/header/app-menu.sass
@@ -18,6 +18,7 @@
 
   &--item-title
     min-width: 0px
+    white-space: nowrap
 
   &--item-action
     background: transparent 
